# backstage-connector

./: .env.example  .gitignore  README.md  object_types.json  pyproject.toml  quick_links.json
backstage_connector/: cli.py  config.py  logging.py
src/: __init__.py  backstage_client.py  cli.py  glean_client.py  logging.py  mapper.py  models.py  sync.py  utils.py
tests/: __init__.py  sample_backstage_api_response_entities.json  test_cli_show.py  test_config.py  test_mapper.py
